# LoTeX

./: .gitignore  CMakeLists.txt  Example.html  Example.txt  README.md  Template.txt  header.h  main.cpp
src/: CMakeLists.txt  Code.hpp  Files.hpp  MessageHandling.hpp  Sample.hpp  SrcFiles.h  Styles.hpp  steel.h
tests/unit_tests/: CMakeLists.txt  SampleTest.cpp
